# StudyNotes

./: .gitignore  README.md
Algorithm/: ac_automation.cpp
Algorithm/radix-tree/: CMakeLists.txt  main.cpp
Algorithm/动态规划/: min_receipt_plan(01背包).cpp
AutoHotkey/: sunquan.ahk  xunce.ahk
IO/: Makefile  aio_sample.cpp  epoll_test.c  eventfd_test.c  tcp_reuse_port_test.c
IO/eventfd_examples/: CMakeLists.txt
IO/eventfd_examples/eventfd_worker/: eventfd_worker.c  helper.h
IO/eventfd_examples/timerfd_worker/: timerfd_worker.c
Languages/bash/bat/: vultr_rate.bat
Languages/c/: big_endian.c
Languages/c/dns/: hostname_to_ip.c  ip_to_hostname.c
Languages/c/openpgm_test/: .gitignore  README.md  build.sh
Languages/c/zmq_pgm/: .gitignore
Languages/cpp/0_libuv/learn_uv/: uv-tcp-echo-client.c  uv_udp.cpp
Languages/cpp/0_libuv/uv_curl_wrapper/: build.sh  curl_httpclient.hpp
Languages/cpp/0_libuv/uv_dynamic_so/: CMakeLists.txt  load_library.cpp
Languages/cpp/0_libuv/uv_zookeeper_wrapper/: uv-node-zk.cpp
Languages/cpp/15_zookeeper_multi_thread_demo/: str_utils.h
Languages/cpp/19_quantlib_demo/: cash_bond.hpp  main.cpp
Languages/cpp/benckmark01_inproc_communication/uv_async/: async_threads.cpp
Languages/cpp/benckmark01_inproc_communication/zmq_inproc/: CMakeLists.txt
Languages/cpp/global_variable_in_dynamic_so/so_static_var/: a.cpp  b.cpp
Languages/cpp/mail_wrapper/: mail_wrapper.h  send_email.c
Languages/go/pbjson/protos/: test.pb.go  test.proto
Languages/proto3/protobuf/: CMakeLists.txt  build_cpp.sh  build_java.sh  pom.xml
Languages/proto3/protobuf/protos/: demo.proto  typedef.proto
Languages/proto3/protobuf3_json/: BUILD  test-protobuf.cpp
Visio/: PGM-multicast.vsdx
WaitReading/: 交易并发.doc
algorithm/: rb_tree.cpp
bash/: cores_cat.sh  vultr_rate.sh
bash/bat/: getip.bat
builder/: BLADE_ROOT
builder/blade/test_blade_proto/: BUILD  http.proto  http_server.cpp
builder/test_blade/: BUILD
c/: build.sh  clock_gettime_test.cpp
c/openpgm_test/: pgmrecv.c  pgmsend.c
c/zmq_pgm/: Makefile  README.md  pub_zmq.cpp  sub_zmq.cpp
cpp/: README.md  perf_result.md  uv_curl_http.h
cpp/0_json/rapidjson/: rapidjson_simple_dom.cpp
cpp/0_libuv/async_uv_test/: CMakeLists.txt  pipe_client.c
cpp/0_libuv/learn_uv/: uv_tcp_client.h  uv_thread_poll.c
cpp/0_libuv/uv_curl_wrapper/: curl_test.cpp  uvwget.cpp
cpp/0_libuv/uv_pipe/: CMakeLists.txt
cpp/0_libuv/uv_zmq/: Makefile
cpp/13_template_skills/: build.sh
cpp/14_future_promise/: future_then_chain_call.cpp
cpp/15_zookeeper_multi_thread_demo/: cluster_manager.h
cpp/19_quantlib_demo/: outright_repo.hpp
cpp/1_json/jsoncpp/: json_cpp_parse_exception_occur.cpp
cpp/1_template_skills/: template_wrapper_skill.cpp
cpp/2_future_promise/: build.sh  future_then_chain_call.cpp
cpp/3_gflags/: build.sh
cpp/3_zookeeper_multi_thread_demo/: cluster_interface.h  cluster_manager.cpp
cpp/4_gflags/: gflags_test.cc
cpp/9_quantlib_demo/: date_usage.hpp  pledge_repo.hpp
cpp/benckmark01_inproc_communication/: CMakeLists.txt  async_uv_perf_result.md
cpp/benckmark01_inproc_communication/uv_async/: CMakeLists.txt
cpp/benckmark01_inproc_communication/zmq_inproc/: bench_zmq_inproc.cpp
cpp/code_convert/: code_convert.cpp  code_convert.h
cpp/cpp11/: build.sh  std_async_test.cpp  templates_demo.cpp
cpp/cpp11_feature/: build.sh  reference_qualifier.cpp
cpp/cpp17_feature/: optional_test.cpp
cpp/dynamic_so/so_static_var/: make.sh
cpp/future_promise/: build.sh  future_then_chain_call.cpp
cpp/global_variable_in_dynamic_so/so_static_var/: def.h  main.cpp  make.sh
cpp/json/: C++ HttpServer & RapidJSON research.docx
cpp/jsoncpp/: json_cpp_parse_exception_occur.cpp
cpp/kafka-sasl/: kafka_producer.cpp
cpp/kafka-sasl-cpp/: CMakeLists.txt
cpp/libuv/: test_async_thread.cpp
cpp/lock/: spin_lock.hpp
cpp/mail_wrapper/: mail_wrapper.cpp
cpp/quantlib_demo/: CMakeLists.txt  README.md  dict_def.hpp  outright_repo.hpp
cpp/quantlib_demo/time/calendars/: ex_china.cpp
cpp/thread/: thread_local_var.c
cpp/uv/: CMakeLists.txt  load_library.cpp  pipe_svr.c  test_async_thread_perf.cpp
cpp/uv_learn/: uv_file.c  uv_tcp_client.cpp
cpp/uv_learn/uv_http_req/: Makefile  README.md  http_request_call.cpp  main.cpp  request.h
cpp/uv_zmq/: Makefile  epoll_lt_et.c  uv_zsock_test.c
cpp/volatile-usage/: volatile-considered-harmful.rst.txt
cpp/yaml-cpp/: test_yaml_cpp.cpp
cpp/zero_byte_of_class_object/: zero_byte_struct.c  zero_byte_struct_with_new.c
cpp/zmq/: test_zmq_inproc_perf.cpp
doc/: install-blade-on-centos7.md
docker/docker_compose_py/: .dockerignore  .gitignore  Dockerfile  README.md  app.py
docs/: 专利技术交底书.doc
go/pbjson/: build.sh  pbjson_test.go
io_model/: Makefile  epoll_lt_et.c
links/: xunce_html.txt
network-protocol/: README.md  arp.cap  icmp_by_ping.cap
network-protocol/k8s/: k8s-zmq-reconnect-with-domain.cap
network-protocol/pgm/: pgm_fast_send_slow_recv.cap  pgm_normal.cap
network-protocol/spring-euraka/: euraka-client.pcapng
network-protocol/wireshark_cap/: h2c.pcap
pkg-build/archlinux_nng/: PKGBUILD
pkg/archlinux_nng/: PKGBUILD  build.sh
ppt_training_by_sq/: C++ Template 入门.pptx  GDB入门&实战.pptx  Git Flow (v1.0).docx  UML建模-初探_(2019-06-04)_连少华.ppsx
proto/protobuf/: .gitignore  CMakeLists.txt  build_cpp.sh  build_java.sh  pom.xml
proto/protobuf/protos/: msgcarrier.proto
proto/protobuf3_json/: test-protobuf.cpp  test-protobuf.proto
redis/: README.md
share_ppt_by_sq/: README.md
share_ppt_by_sq/C++Template入门/: cpp_template_demo.cpp
slides/: README.md
tcpip/wireshark_cap/: README.md  dhcp.pcapng  tcp_error_retransmission.pcapng
tools/: get_ss_port.sh  install.sh  install_software_macos.sh
tools/MacOS/: BCompare  README.md  install.sh  install_font.sh  install_software_macos.sh  install_zsh_plugin.sh  macos_tools_install.sh  myunzip.py  zshrc  搜狗输入短语phrases.ini
tools/MacOS/profiles/: .gitconfig  .tmux.conf  .vimrc  .zshrc  Pro.terminal
tools/sqtools/: cPix.ini
tools/sqtools/eclipse_dict/: dict.txt
tools/wondershaper/: makefile
(+3 files in other folders)
