cmake_minimum_required(VERSION 3.0)
project(kafkaproducer)

if(ADC_LINK_DIRS)
  link_directories(${ADC_LINK_DIRS})
else()
  link_directories(${PROJECT_SOURCE_DIR}/../../../build)
endif()

if(MSVC)
  list(APPEND add_cppflags /W4)
  if(CMAKE_BUILD_TYPE STREQUAL "Release")
     list(APPEND add_cppflags /O2)
  endif()
  # list(APPEND add_cppflags  /std:c++17)
else()
  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    list(APPEND add_cppflags -g -O0)
  else()
    list(APPEND add_cppflags -g -O2)
  endif()
  list(APPEND add_cppflags -fvisibility=hidden)
  list(APPEND add_cppflags -std=c++11)
  list(APPEND add_cppflags -Wall -Wextra)
  list(APPEND add_cppflags -Wno-unused-but-set-variable)
  list(APPEND add_cppflags -Wno-unused-parameter)
endif()

if(MSVC)
  if(NOT DEFINED ENV{3RDPARTY})
     message(FATAL_ERROR "not defined system environment variable:3RDPARTY") 
  else()
     list(APPEND add_includes $ENV{3RDPARTY}/rdkafka/include)
  endif()

  list(APPEND add_defines WIN32_LEAN_AND_MEAN _WIN32_WINNT=0x0600)
  list(APPEND add_libraries  $ENV{3RDPARTY}/rdkafka/rdkafka.lib)
else()
  list(APPEND add_includes /usr/include)
  list(APPEND add_libraries pthread rdkafka)
endif()

file(GLOB project_sources ./*.h  ./*.cpp)
add_executable(kafkaproducer ${project_sources})

target_compile_definitions(kafkaproducer PRIVATE ${add_defines})
target_compile_options(kafkaproducer PRIVATE ${add_cppflags})
target_link_libraries(kafkaproducer ${add_libraries})
