cmake_minimum_required(VERSION 3.0)
project(uv_dynamic_so)

if(ADC_LINK_DIRS)
  link_directories(${ADC_LINK_DIRS})
else()
  link_directories(${PROJECT_SOURCE_DIR}/../../../build)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../../../build)
endif()

if(MSVC)
  list(APPEND add_cppflags /W4)
  if(CMAKE_BUILD_TYPE STREQUAL "Release")
     list(APPEND add_cppflags /O2)
  endif()
  # list(APPEND add_cppflags  /std:c++11)
else()
  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    list(APPEND add_cppflags -g)
  endif()
  list(APPEND add_cppflags -fvisibility=hidden)
  list(APPEND add_cppflags -std=c++11 -O2)
  list(APPEND add_cppflags -Wall -Wextra)
  list(APPEND add_cppflags -Wno-unused-but-set-variable)
  list(APPEND add_cppflags -Wno-unused-parameter)
endif()

if(MSVC)
  if(NOT DEFINED ENV{3RDPARTY})
      message(FATAL_ERROR "not defined system environment variable:3RDPARTY")
  else()
     list(APPEND add_includes $ENV{3RDPARTY}/libuv/include)
  endif()

  list(APPEND add_defines WIN32_LEAN_AND_MEAN _WIN32_WINNT=0x0600)
  list(APPEND add_libraries  $ENV{3RDPARTY}/libuv/uv.lib)
else()
  list(APPEND add_includes /usr/include)
  list(APPEND add_libraries pthread uv)
endif()

add_executable(uv_dynamic_so load_library.cpp)
target_compile_definitions(uv_dynamic_so PRIVATE ${add_defines})
target_compile_options(uv_dynamic_so PRIVATE ${add_cppflags})
target_include_directories(uv_dynamic_so PRIVATE ${add_includes})
target_link_libraries(uv_dynamic_so ${add_libraries})


